# determinant-calculator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  det.c  index.html  main  main.c  run.sh
.github/workflows/: static.yml
files/: example.txt
html/: annotated.html  calculator_8cpp.html  calculator_8h.html  calculator_8h_source.html  classFaz.html  classdet_1_1Calculator-members.html  classdet_1_1Calculator.html  classdet_1_1Parser-members.html  classdet_1_1Parser.html  classes.html  common_8h.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  main_8cpp.html  md_README.html  pages.html  parser_8cpp.html  parser_8h.html  parser_8h_source.html  structdet_1_1ElementarProductCols-members.html  structdet_1_1ElementarProductCols.html
html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  searchdata.js
latex/: annotated.tex  calculator_8cpp.tex  calculator_8h.tex  calculator_8h_source.tex  classFaz.tex  classdet_1_1Calculator.tex  classdet_1_1Parser.tex  common_8h.tex  common_8h_source.tex  files.tex  index.tex  main_8cpp.tex  md_README.tex  parser_8cpp.tex  parser_8h.tex  parser_8h_source.tex  refman.tex  structdet_1_1ElementarProductCols.tex
src/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  calculator.cpp  det.cpp  main.cpp  parser.cpp  test.txt
src/include/: common.h  (+2 more)
